<resources>
    <string name="app_name">WST-Pos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_ws_tech">Welcome to WS-Tech</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="wstech_ltd">WSTech-Ltd</string>
</resources>