<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_animation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_colorFilter="@color/box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            android:visibility="gone" />
        <FrameLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_login"
                android:fitsSystemWindows="true"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                tools:context=".MainActivity"
                tools:layout_editor_absoluteY="1dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="168dp"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/welcome_to_ws_tech"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="219dp"
                    android:layout_height="114dp"
                    android:layout_marginTop="56dp"
                    android:padding="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo"
                    android:contentDescription="@string/wstech_ltd" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_username"
                    android:layout_width="357dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/custom_inputbox"
                    android:drawableStart="@drawable/custom_user_icon"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="30dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_userpassword"
                    android:layout_width="357dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_inputbox"
                    android:drawableStart="@drawable/custom_password_icon"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="30dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_username" />
                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:padding="1dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/box"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.092"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_userpassword"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:padding="15dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp"
                    android:text="@string/login"
                    android:textColor="@color/box"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox"
                    app:layout_constraintVertical_bias="0.089" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </FrameLayout>
</layout>